--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
     </main>
 
     <script src="app.js"></script>
-    <% /*= t.include("partials/_adFoot.html"); */ %>
-    <%= t.include("partials/_workHere.html") %>
+    <%= json.project.production ? t.include("partials/_adFoot.html") : "" %>
+    <%= json.project.production ? t.include("partials/_workHere.html") : "" %>
   </body>
 </html>
