--- a/src/_defense.html
+++ b/src/_defense.html
@@ -35,7 +35,7 @@
   </label>
   <div class="row">
     <section> 8 </section>
-    <section class="lorem"> ? </section>
+    <section> 4 </section>
   </div>
   <label class="row">
     Regular-season games played
