--- a/src/_qb.html
+++ b/src/_qb.html
@@ -4,7 +4,55 @@
 <p>
   For Tom Brady and Russell Wilson, there are plenty of stats that make for an impressive body of work. Here are a few to put the quarterbacks in perspective.
 
+<div class="graphs">
+<%
+  var yardage = {
+    "Brett Favre": { count: 71838 },
+    "Peyton Manning": { count: 69691 },
+    "Dan Marino": { count: 61361 },
+    "Drew Brees": { count: 56033 },
+    "Tom Brady": { count: 53258, team: "patriots" },
+    "Russell Wilson": { count: 9950, team: "seahawks outside" }
+  };
+
+  var passes = {
+    "Peyton Manning": { count: 530 },
+    "Brett Favre": { count: 508 },
+    "Dan Marino": { count: 420 },
+    "Drew Brees": { count: 396 },
+    "Tom Brady": { count: 392, team: "patriots" },
+    "Russell Wilson": { count: 72, team: "seahawks outside" }
+  };
+%>
+  <h2>Career regular-season passing yards</h2>
+<%
+  for (var player in yardage) {
+    var count = yardage[player].count;
+    var team = yardage[player].team || "";
+%>
+  <div class="bar <%= team %>" style="width: <%= count / 71838 * 100 %>%">
+    <span class="label"><%= player %> (<%= grunt.template.formatNumber(count) %> yards)</span>
+  </div>
+<%
+  }
+%>
+
+  <h2>Career touchdown passes</h2>
+<%
+  for (var player in passes) {
+    var count = passes[player].count;
+    var team = passes[player].team || "";
+%>
+  <div class="bar <%= team %>" style="width: <%= count / 530 * 100 %>%">
+    <span class="label"><%= player %> (<%= count %>)</span>
+  </div>
+<%
+  }
+%>
+</div>
+
 <div class="stats">
+  <h2>Stats</h2>
   <div class="row">
     <section class="name">Tom Brady</section>
     <section class="name">Russell Wilson</section>
@@ -34,29 +82,15 @@
     Career regular-season wins
   </label>
   <div class="row">
-    <section> 160, third-most by a quarterback in NFL history. Trails only Brett Favre (186) and Peyton Manning (179). </section>
-    <section> 36, the most by a quarterback in his first three seasons in the Super Bowl era (since 1966). </section>
-  </div>
-  <label class="row">
-    Career regular-season passing yards
-  </label>
-  <div class="row">
-    <section> 53,258, the fifth-highest total in NFL history. Brett Favre (71,838), Peyton Manning (69,691), Dan Marino (61,361) and Drew Brees (56,033) are ahead of him. </section>
-    <section> 9,950, the 181st-highest total in NFL history. </section>
-  </div>
-  <label class="row">
-    Career touchdown passes
-  </label>
-  <div class="row">
-    <section> 20, most in NFL history by a quarterback. </section>
-    <section> 6, over three seasons. </section>
+    <section class="prose"> 160, <em>third-most by a quarterback in NFL history</em>. Trails only Brett Favre (186) and Peyton Manning (179). </section>
+    <section class="prose"> 36, <em>the most by a quarterback in his first three seasons</em> in the Super Bowl era (since 1966). </section>
   </div>
   <label class="row">
     Career playoff winning percentage
   </label>
   <div class="row">
     <section> .714, the highest by a quarterback with at least 20 playoff starts. He is 20-8 overall. </section>
-    <section class="lorem"> ? </section>
+    <section> .857, a 6-1 record built over three playoff appearances and consecutive Super Bowl berths. </section>
   </div>
   <label class="row">
     Career playoff passing yards
