End of day, added logos, lots of style tweaks

--- a/src/_defense.html
+++ b/src/_defense.html
@@ -6,78 +6,78 @@
 
 <div class="stats">
   <div class="row">
-    <div class="half name"> Darrelle Revis </div>
-    <div class="half name"> Richard Sherman </div>
+    <div class="half name"> Revis </div>
+    <div class="half name"> Sherman </div>
   </div>
   <label class="row">
     Age
   </label>
   <div class="row">
-    <section> 29 </section>
-    <section> 26 </section>
+    <section class="numeral"> 29 </section>
+    <section class="numeral"> 26 </section>
   </div>
   <label class="row">
     Height
   </label>
   <div class="row">
-    <section> 6'0" </section>
-    <section> 6'3" </section>
+    <section class="numeral"> 6'0" </section>
+    <section class="numeral"> 6'3" </section>
   </div>
   <label class="row">
     Weight
   </label>
   <div class="row">
-    <section> 205 </section>
-    <section> 195 </section>
+    <section class="numeral"> 205 </section>
+    <section class="numeral"> 195 </section>
   </div>
   <label class="row">
     Seasons in NFL
   </label>
   <div class="row">
-    <section> 8 </section>
-    <section> 4 </section>
+    <section class="numeral"> 8 </section>
+    <section class="numeral"> 4 </section>
   </div>
   <label class="row">
     Regular-season games played
   </label>
   <div class="row">
-    <section> 111 </section>
-    <section> 64 </section>
+    <section class="numeral"> 111 </section>
+    <section class="numeral"> 64 </section>
   </div>
   <label class="row">
     Career regular-season interceptions
   </label>
   <div class="row">
-    <section> 23 </section>
-    <section> 24 </section>
+    <section class="numeral"> 23 </section>
+    <section class="numeral"> 24 </section>
   </div>
   <label class="row">
     Career regular-season passes defensed
   </label>
   <div class="row">
-    <section> 124 </section>
-    <section> 70 </section>
+    <section class="numeral"> 124 </section>
+    <section class="numeral"> 70 </section>
   </div>
   <label class="row">
     Career playoff games
   </label>
   <div class="row">
-    <section> 8 </section>
-    <section> 7 </section>
+    <section class="numeral"> 8 </section>
+    <section class="numeral"> 7 </section>
   </div>
   <label class="row">
     Career playoff interceptions
   </label>
   <div class="row">
-    <section> 2 </section>
-    <section> 2 </section>
+    <section class="numeral"> 2 </section>
+    <section class="numeral"> 2 </section>
   </div>
   <label class="row">
-    Career playof passes defensed
+    Career playoff passes defensed
   </label>
   <div class="row">
-    <section> 7 </section>
-    <section> 8 </section>
+    <section class="numeral"> 7 </section>
+    <section class="numeral"> 8 </section>
   </div>
 
 </div>
