--- a/src/index.html
+++ b/src/index.html
@@ -11,18 +11,25 @@
   </head>
   <body>
 
-    <main>
+    <nav class="top-bar">
+      <a class="logo" href="http://seattletimes.com">
+        <img src="./assets/st-logo.png">
+      </a>
+      <a class="share"></a>
+    </nav>
+
+    <main class="startup">
       <section class="intro">
-        <h1>Patriots</h1>
-        <h2>vs.</h2>
-        <h1>Seahawks</h1>
-        <h3>Super Bowl 49 matchup</h3>
+        <img class="pats logo left-side" src="assets/pat-mark-1-web.gif">
+        <img class="seahawks logo right-side" src="assets/sea-mark-1-web.gif">
+        <div class="content">
+          <h1>Patriots</h1>
+          <h2>vs.</h2>
+          <h1>Seahawks</h1>
+          <h3>Super Bowl 49 matchup</h3>
 
-        <p>
-          Intro text goes here and is super exciting.
-
-        <div class="social">
-          <a class="share"></a>
+          <p>
+            Super Bowl XLIX is a marquee matchup filled with intriguing players and coaches on the Seahawks and Patriots. A look at how the coaches, quarterbacks and star defensive backs compare.
         </div>
       </section>
       <section class="matchup">
