--- a/src/_coaches.html
+++ b/src/_coaches.html
@@ -7,6 +7,86 @@
 <p>
   Each was also fired from their first NFL head-coaching jobs, but they have come a long way to achieve success.
 
+<div class="stats">
+  <div class="row">
+    <div class="half name"> Belichick </div>
+    <div class="half name"> Carroll </div>
+  </div>
+  <label class="row">
+    Age
+  </label>
+  <div class="row">
+    <section class="numeral"> 62 </section>
+    <section class="numeral"> 63 </section>
+  </div>
+  <label class="row">
+    Record as NFL head coaches before current jobs
+  </label>
+  <div class="row">
+    <section> <b>36-44</b>, four seasons with Cleveland Browns </section>
+    <section> <b>33-31</b>, one season with New York Jets and three seasons with the New England Patriots</section>
+  </div>
+  <label class="row">
+    Record with current team
+  </label>
+  <div class="row">
+    <section> <b>175-65</b>, 15 seasons </section>
+    <section> <b>50-30</b>, five seasons </section>
+  </div>
+  <label class="row">
+    Career playoff record
+  </label>
+  <div class="row">
+    <section> <b>21-9</b>. The 21 victories are the most in NFL history. Tom landry won 20 playoff games with the Cowboys. </section>
+    <section class="numeral"> 8-4 </section>
+  </div>
+  <label class="row">
+    Career playoff record with current team
+  </label>
+  <div class="row">
+    <section class="numeral"> 20-8 </section>
+    <section class="numeral"> 7-2 </section>
+  </div>
+  <label class="row">
+    Conference championships won
+  </label>
+  <div class="row">
+    <section>
+      <% [2001, 2003, 2004, 2007, 2011, 2014].forEach(function(year) { %>
+        <div>
+          <i class="fa fa-star-o"></i> <%= year %>
+        </div>
+      <% }) %>
+    </section>
+    <section>
+      <% [2013, 2014].forEach(function(year) { %>
+        <div>
+          <i class="fa fa-star-o"></i> <%= year %>
+        </div>
+      <% }) %>
+    </section>
+  </div>
+  <label class="row">
+    Super Bowls won
+  </label>
+  <div class="row">
+    <section>
+      <% [2001, 2003, 2004].forEach(function(year) { %>
+        <div>
+          <i class="fa fa-star"></i> <%= year %>
+        </div>
+      <% }) %>
+    </section>
+    <section>
+      <% [2013].forEach(function(year) { %>
+        <div>
+          <i class="fa fa-star"></i> <%= year %>
+        </div>
+      <% }) %></section>
+  </div>
+
+</div>
+
 <div class="graphs">
   <h2>Career playoff wins, including playoffs</h2>
 <%
@@ -15,72 +95,16 @@
     "George Halas": { count: 324 },
     "Tom Landry": { count: 270 },
     "Bill Belichick": { count: 232 },
-    "Pete Carroll": { count: 91, team: "seahawks" }
+    "Pete Carroll": { count: 91, team: "seahawks outside" }
   }
   for (var coach in wins) {
     var count = wins[coach].count;
     var team = wins[coach].team || "";
 %>
-  <div class="bar <%= team %>" style="width: <%= count / 347 * 100 %>%"><%= coach %> (<%= count %>)</div>
+  <div class="bar <%= team %>" style="width: <%= count / 347 * 100 %>%">
+    <span class="label"><%= coach %> (<%= count %>)</span>
+  </div>
 <%
   }
 %>
-</div>
-
-<div class="stats">
-  <h2>Stats</h2>
-  <div class="row">
-    <div class="half name"> Bill Belichick </div>
-    <div class="half name"> Pete Carroll </div>
-  </div>
-  <label class="row">
-    Age
-  </label>
-  <div class="row">
-    <section> 62 </section>
-    <section> 63 </section>
-  </div>
-  <label class="row">
-    Record as NFL head coaches before current jobs
-  </label>
-  <div class="row">
-    <section> 36-44, four seasons with Cleveland Browns </section>
-    <section> 33-31, one season with New York Jets and three seasons with the New England Patriots</section>
-  </div>
-  <label class="row">
-    Record with current team
-  </label>
-  <div class="row">
-    <section> 175-65, 15 seasons </section>
-    <section> 50-30, five seasons </section>
-  </div>
-  <label class="row">
-    Career playoff record
-  </label>
-  <div class="row">
-    <section> 21-9. The 21 victories are the most in NFL history. Tom landry won 20 playoff games with the Cowboys. </section>
-    <section> 8-4 </section>
-  </div>
-  <label class="row">
-    Career playoff record with current team
-  </label>
-  <div class="row">
-    <section> 20-8 </section>
-    <section> 7-2 </section>
-  </div>
-  <label class="row">
-    Conference championships won
-  </label>
-  <div class="row">
-    <section> 6 (2001, 2003, 2004, 2007, 2011, 2014) </section>
-    <section> 2 (2013, 2014) </section>
-  </div>
-  <label class="row">
-    Super Bowls won
-  </label>
-  <div class="row">
-    <section> 3 (2001, 2003, 2004) </section>
-    <section> 1 (2013) </section>
-  </div>
-
 </div>
