--- a/src/_qb.html
+++ b/src/_qb.html
@@ -4,6 +4,63 @@
 <p>
   For Tom Brady and Russell Wilson, there are plenty of stats that make for an impressive body of work. Here are a few to put the quarterbacks in perspective.
 
+<div class="stats">
+  <div class="row">
+    <section class="name">Brady</section>
+    <section class="name">Wilson</section>
+  </div>
+  <label class="row">
+    Age
+  </label>
+  <div class="row">
+    <section class="numeral"> 37 </section>
+    <section class="numeral"> 26 </section>
+  </div>
+  <label class="row">
+    Height
+  </label>
+  <div class="row">
+    <section class="numeral"> 6'4" </section>
+    <section class="numeral"> 5'11" </section>
+  </div>
+  <label class="row">
+    Weight
+  </label>
+  <div class="row">
+    <section class="numeral"> 225 </section>
+    <section class="numeral"> 206 </section>
+  </div>
+  <label class="row">
+    Career regular-season wins
+  </label>
+  <div class="row">
+    <section class="prose"> <b>160</b>, third-most by a quarterback in NFL history. Trails only Brett Favre (186) and Peyton Manning (179). </section>
+    <section class="prose"> <b>36</b>, the most by a quarterback in his first three seasons in the Super Bowl era (since 1966). </section>
+  </div>
+  <label class="row">
+    Career playoff winning percentage
+  </label>
+  <div class="row">
+    <section> <b>.714</b>, the highest by a quarterback with at least 20 playoff starts. He is 20-8 overall. </section>
+    <section> <b>.857</b>, a 6-1 record built over three playoff appearances and consecutive Super Bowl berths. </section>
+  </div>
+  <label class="row">
+    Career playoff passing yards
+  </label>
+  <div class="row">
+    <section> <b>7,017</b>, the most in NFL history. Peyton Manning (6,800) is second. </section>
+    <section> <b>1,575</b> </section>
+  </div>
+  <label class="row">
+    Career playoff touchdown passes
+  </label>
+  <div class="row">
+    <section> <b>49</b>, the most in NFL history. Joe Montana (45) and Brett Favre (44) are next on the list. </section>
+    <section> <b>10</b> </section>
+  </div>
+
+</div>
+
 <div class="graphs">
 <%
   var yardage = {
@@ -31,7 +88,7 @@
     var team = yardage[player].team || "";
 %>
   <div class="bar <%= team %>" style="width: <%= count / 71838 * 100 %>%">
-    <span class="label"><%= player %> (<%= grunt.template.formatNumber(count) %> yards)</span>
+    <span class="label"><%= player %> - <%= grunt.template.formatNumber(count) %> yards</span>
   </div>
 <%
   }
@@ -44,74 +101,9 @@
     var team = passes[player].team || "";
 %>
   <div class="bar <%= team %>" style="width: <%= count / 530 * 100 %>%">
-    <span class="label"><%= player %> (<%= count %>)</span>
+    <span class="label"><%= player %> - <%= count %></span>
   </div>
 <%
   }
 %>
-</div>
-
-<div class="stats">
-  <h2>Stats</h2>
-  <div class="row">
-    <section class="name">Tom Brady</section>
-    <section class="name">Russell Wilson</section>
-  </div>
-  <label class="row">
-    Age
-  </label>
-  <div class="row">
-    <section> 37 </section>
-    <section> 26 </section>
-  </div>
-  <label class="row">
-    Height
-  </label>
-  <div class="row">
-    <section> 6'4" </section>
-    <section> 5'11" </section>
-  </div>
-  <label class="row">
-    Weight
-  </label>
-  <div class="row">
-    <section> 225 </section>
-    <section> 206 </section>
-  </div>
-  <label class="row">
-    Career regular-season wins
-  </label>
-  <div class="row">
-    <section class="prose"> 160, <em>third-most by a quarterback in NFL history</em>. Trails only Brett Favre (186) and Peyton Manning (179). </section>
-    <section class="prose"> 36, <em>the most by a quarterback in his first three seasons</em> in the Super Bowl era (since 1966). </section>
-  </div>
-  <label class="row">
-    Career playoff winning percentage
-  </label>
-  <div class="row">
-    <section> .714, the highest by a quarterback with at least 20 playoff starts. He is 20-8 overall. </section>
-    <section> .857, a 6-1 record built over three playoff appearances and consecutive Super Bowl berths. </section>
-  </div>
-  <label class="row">
-    Career playoff passing yards
-  </label>
-  <div class="row">
-    <section> 7,017, the most in NFL history. Peyton Manning (6,800) is second. </section>
-    <section> 1,575 </section>
-  </div>
-  <label class="row">
-    Career playoff touchdown passes
-  </label>
-  <div class="row">
-    <section> 49, the most in NFL history. Joe Montana (45) and Brett Favre (44) are next on the list. </section>
-    <section> 10 </section>
-  </div>
-  <label class="row">
-    Career playoff record his first three playoff appearances
-  </label>
-  <div class="row">
-    <section> 9-0. Brady won three Super Bowls in four seasons. </section>
-    <section> 6-1. Wilson has reached consecutive Super Bowls, and beat Denver in Super Bowl XLVIII. </section>
-  </div>
-
 </div>
