--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,13 @@
 
           <p>
             Super Bowl XLIX is a marquee matchup filled with intriguing players and coaches on the Seahawks and Patriots. A look at how the coaches, quarterbacks and star defensive backs compare.
+
+
+          <p class="instructions">
+            <i class="fa fa-chevron-down"></i>
+            Scroll to continue
+            <i class="fa fa-chevron-down"></i>
+
         </div>
       </section>
       <section class="matchup">
@@ -68,6 +75,9 @@
       <a class="logo" href="http://seattletimes.com">
         <img src="./assets/st-logo.png">
       </a>
+
+      <span class="credit">Reporting: <b>Ed Guzman</b></span>
+      <span class="credit">Development: <b>Thomas Wilburn</b></span>
       <a class="share-bottom"></a>
     </footer>
 
