--- a/src/_coaches.html
+++ b/src/_coaches.html
@@ -20,7 +20,7 @@
     <section class="numeral"> 63 </section>
   </div>
   <label class="row">
-    Record as NFL head coaches before current jobs
+    Record as NFL head coach before current job
   </label>
   <div class="row">
     <section> <b>36-44</b>, four seasons with Cleveland Browns </section>
