--- a/src/_defense.html
+++ b/src/_defense.html
@@ -83,15 +83,15 @@
     Signature play
   </label>
   <div class="row">
-    <section>As a member of the New York Jets, he returned an interception 100 yards for a touchdown vs. the Dolphins in a &ldquo;Monday Night Football&rdquo; game in 2011.</section>
-    <section>Sherman’s tipped pass to Malcolm Smith at the end of the 2013 NFC Championship Game not only sent the Seahawks to the Super Bowl but also will go down as one of the biggest plays in the history of Seattle sports.</section>
+    <section class="prose">As a member of the New York Jets, he returned an interception 100 yards for a touchdown vs. the Dolphins in a &ldquo;Monday Night Football&rdquo; game in 2011.</section>
+    <section class="prose">Sherman’s tipped pass to Malcolm Smith at the end of the 2013 NFC Championship Game not only sent the Seahawks to the Super Bowl but also will go down as one of the biggest plays in the history of Seattle sports.</section>
   </div>
   <label class="row">
     How Doug Baldwin views them
   </label>
   <div class="row">
-    <section>&ldquo;Revis is probably one of the most patient defensive backs I have watched on tape. His technique is vastly different from what I have seen from other guys. It presents a challenge.&rdquo;</section>
-    <section>&ldquo;Sherman is one of those guys – he might not be the most patient but he has length to him and his competitiveness is unparalleled.&rdquo;</section>
+    <section class="prose">&ldquo;Revis is probably one of the most patient defensive backs I have watched on tape. His technique is vastly different from what I have seen from other guys. It presents a challenge.&rdquo;</section>
+    <section class="prose">&ldquo;Sherman is one of those guys – he might not be the most patient but he has length to him and his competitiveness is unparalleled.&rdquo;</section>
   </div>
 
 </div>
