--- a/src/_qb.html
+++ b/src/_qb.html
@@ -19,6 +19,14 @@
   </div>
 
   <label class="row">
+    Seasons in NFL
+  </label>
+  <div class="row">
+    <section class="numeral"> 15 </section>
+    <section class="numeral"> 3 </section>
+  </div>
+
+  <label class="row">
     Height
   </label>
   <div class="row">
@@ -46,8 +54,8 @@
     Career playoff winning percentage
   </label>
   <div class="row">
-    <section> <b>.714</b>, the highest by a quarterback with at least 20 playoff starts. He is 20-8 overall. </section>
-    <section> <b>.857</b>, a 6-1 record built over three playoff appearances and consecutive Super Bowl berths. </section>
+    <section class="prose"> <b>.714</b>, the highest by a quarterback with at least 20 playoff starts. He is 20-8 overall. </section>
+    <section class="prose"> <b>.857</b>, a 6-1 record built over three playoff appearances and consecutive Super Bowl berths. </section>
   </div>
 
   <div class="graphs">
