Prose sections for coaches

--- a/src/_coaches.html
+++ b/src/_coaches.html
@@ -23,8 +23,8 @@
     Record as NFL head coach before current job
   </label>
   <div class="row">
-    <section> <b>36-44</b>, four seasons with Cleveland Browns </section>
-    <section> <b>33-31</b>, one season with New York Jets and three seasons with the New England Patriots</section>
+    <section class="prose"> <b>36-44</b>, four seasons with Cleveland Browns </section>
+    <section class="prose"> <b>33-31</b>, one season with New York Jets and three seasons with the New England Patriots</section>
   </div>
   <label class="row">
     Record with current team
@@ -58,7 +58,7 @@
     Career playoff record
   </label>
   <div class="row">
-    <section> <b>21-9</b>. The 21 victories are the most in NFL history. Tom landry won 20 playoff games with the Cowboys. </section>
+    <section class="prose"> <b>21-9</b>. The 21 victories are the most in NFL history. Tom landry won 20 playoff games with the Cowboys. </section>
     <section class="numeral"> 8-4 </section>
   </div>
   <label class="row">
