Add read more links

--- a/src/_defense.html
+++ b/src/_defense.html
@@ -4,6 +4,10 @@
 <p>
   Richard Sherman and Darrelle Revis started their NFL careers at different points (Revis was a first-round draft pick, Sherman was taken in the fifth) but both arrived at the same destination: Best cornerback in the NFL. 
 
+<a class="read-more" href="http://seattletimes.com/html/seahawks/2025568228_revissherman29xml.html">
+  Read more from Bob Condotta <i class="fa fa-chevron-right"></i>
+</a>
+
 <div class="stats">
   <div class="row">
     <div class="half name"> Revis </div>
