--- a/src/_coaches.html
+++ b/src/_coaches.html
@@ -7,6 +7,10 @@
 <p>
   Each was also fired from their first NFL head-coaching jobs, but they have come a long way to achieve success.
 
+  <a class="read-more" href="http://seattletimes.com/html/larrystone/2025557427_stone28xml.html">
+    Read more from Larry Stone <i class="fa fa-chevron-right"></i>
+  </a>
+
 <div class="stats">
   <div class="row">
     <div class="half name"> Belichick </div>
