Corrections to coaching section from Paul

--- a/src/_coaches.html
+++ b/src/_coaches.html
@@ -38,7 +38,7 @@
     <section> <b>50-30</b>, five seasons </section>
   </div>
   <div class="graphs">
-    <label class="row">Career playoff wins, including playoffs</label>
+    <label class="row">Career wins, including playoffs</label>
   <%
     var wins = {
       "Don Shula": { count: 347 },
@@ -62,7 +62,7 @@
     Career playoff record
   </label>
   <div class="row">
-    <section class="prose"> <b>21-9</b>. The 21 victories are the most in NFL history. Tom landry won 20 playoff games with the Cowboys. </section>
+    <section class="prose"> <b>21-9</b>. The 21 victories are the most in NFL history. Tom Landry won 20 playoff games with the Cowboys. </section>
     <section class="numeral"> 8-4 </section>
   </div>
   <label class="row">
@@ -103,7 +103,7 @@
       <% }) %>
     </section>
     <section>
-      <% [2013].forEach(function(year) { %>
+      <% [2014].forEach(function(year) { %>
         <div>
           <i class="fa fa-star"></i> <%= year %>
         </div>
