Swapped logos for Nowlin's nifty helmets

--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,8 @@
 
     <main class="startup">
       <section class="intro">
-        <img class="pats logo left-side" src="assets/pat-mark-1-web.gif">
-        <img class="seahawks logo right-side" src="assets/sea-mark-1-web.gif">
+        <img class="pats logo left-side" src="assets/Patriot-helmet-c.png">
+        <img class="seahawks logo right-side" src="assets/Seahawk-helmet-c.png">
         <div class="content">
           <h1>Patriots</h1>
           <h2>vs.</h2>
