--- a/src/_coaches.html
+++ b/src/_coaches.html
@@ -62,7 +62,7 @@
     Career playoff record
   </label>
   <div class="row">
-    <section class="prose"> <b>21-9</b>. The 21 victories are the most in NFL history. Tom Landry won 20 playoff games with the Cowboys. </section>
+    <section class="prose"> <b>21-9</b>, the 21 victories are the most in NFL history. Tom Landry won 20 playoff games with the Cowboys</section>
     <section class="numeral"> 8-4 </section>
   </div>
   <label class="row">
@@ -96,7 +96,7 @@
   </label>
   <div class="row">
     <section>
-      <% [2001, 2003, 2004].forEach(function(year) { %>
+      <% [2002, 2004, 2005].forEach(function(year) { %>
         <div>
           <i class="fa fa-star"></i> <%= year %>
         </div>
