Corrections from Ed

--- a/src/_defense.html
+++ b/src/_defense.html
@@ -1,5 +1,5 @@
 <p>
-  Playing cornerback can be high-risk, high-reward proposition and requires a short memory, especially after a bad play. Those who play the position well do so while brimming with confidence.
+  Playing cornerback can be a high-risk, high-reward proposition and requires a short memory, especially after a bad play. Those who play the position well do so while brimming with confidence.
 
 <p>
   Richard Sherman and Darrelle Revis started their NFL careers at different points (Revis was a first-round draft pick, Sherman was taken in the fifth) but both arrived at the same destination: Best cornerback in the NFL. 
