--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
           <h1>Patriots</h1>
           <h2>vs.</h2>
           <h1>Seahawks</h1>
-          <h3>Super Bowl 49 matchup</h3>
+          <h3>Super Bowl XLIX matchup</h3>
 
           <p>
             Super Bowl XLIX is a marquee matchup filled with intriguing players and coaches on the Seahawks and Patriots. A look at how the coaches, quarterbacks and star defensive backs compare.
