Adds Brewer column for QBs

--- a/src/_qb.html
+++ b/src/_qb.html
@@ -4,6 +4,10 @@
 <p>
   For Tom Brady and Russell Wilson, there are plenty of stats that make for an impressive body of work. Here are a few to put the quarterbacks in perspective.
 
+  <a class="read-more" href="http://seattletimes.com/html/jerrybrewer/2025593801_brewer01xml.html">
+    Read more from Jerry Brewer <i class="fa fa-chevron-right"></i>
+  </a>
+
 <div class="stats">
   <div class="row">
     <section class="name">Brady</section>
